--- a/form.html
+++ b/form.html
@@ -49,106 +49,33 @@
             </div>
 
             <div>
-                <ul>
-                    <li><button id="coord" onclick="mostrarCoord()">Mostrar Coord</button></li>
-                </ul>
-            </div>
-
-            <div>
                 <ul class="lista-pessoas">
+                    <li><button id="coord" onclick="mostrarCoord()">Mostrar Coord</button></li>
                     <li><button id="joao" onclick="campoJoao()">João</button></li>
                     <li><button id="maria" onclick="campoMaria()">Maria</button></li>
                     <li><button id="pedro" onclick="campoPedro()">Pedro</button></li>
-                    <li><button id="" onclick="campoTeste()">Teste</button></li>
+                    <li><button id="teste" onclick="campoTeste()">Teste</button></li>
                 </ul>
             </div>
+
         </div>
-        <div>
-            <img src="img/contrato-x.jpeg" id="target" width="600" height="400">
-            <input type="hidden" name="x" id="x" value="">
-            <input type="hidden" name="y" id="y" value="">
-            <input type="hidden" name="w" id="w" value="">
-            <input type="hidden" name="h" id="h" value="">
-            <button type="submit">Crop</button>
+        <div class="crop_espaco">
+            <img src="img/espaco.jpg" id="target" width="600" height="400">
+            <br>
+            <button id="espaco1" onclick="setImage('espaco.jpg')">Espaço 1</button>
+            <button id="espaco2" onclick="setImage('space1.png')">Espaço 2</button>
+            <button id="espaco3" onclick="setImage('space2.jpg')">Espaço 3</button>
+            <br><br>
+            <button id="evento-update" onclick="eventoUpdate()">Evento Update</button>
+            <button id="evento-activate" onclick="eventoActivate()">Evento Activate</button>
+            <button id="evento-change" onclick="eventoChange()">Evento Change</button>
+            <button id="evento-remove" onclick="eventoRemove()">Evento Remove</button>
         </div>
 
-        <div id="container" width="600" height="400">
-        </div>
-        <script>
-            /* $(document).ready(function(){
-                    
-                    Jcrop.attach('target',
-                    {
-                        onselect: function(crop){
-                            console.log(crop);
-    
-                            $("#x").val(crop.x);
-                            $("#y").val(crop.y);
-                            $("#w").val(crop.w);
-                            $("#h").val(crop.h);
-                        }
-                    });
-                }) */
-
-            /* const stage = Jcrop.attach('alvo');
-
-            stage.listen('crop.move',(widget,e) => {
-            console.log(widget.pos);
-            }); */
-
-            var jcp;
-            Jcrop.load('alvo').then(img => {
-                jcp = Jcrop.attach(img, { multi: false, canRemove: false });
-                const rt = Jcrop.Rect.sizeOf(jcp.el);
-                jcp.newWidget(rt.scale(.6, .4).center(rt.w, rt.h));
-                jcp.focus();               
-            });
-
-            function mostrarCoord() {
-                jcp.listen('crop.change', (widget, e) => {
-                    console.log(widget.pos)
-                });
-            }
-
-            function campoJoao() {
-                const rect = Jcrop.Rect.create(130, 350, 360, 110);
-                jcp.newWidget(rect);
-                jcp.addClass('jcrop-ux-keep-current');
-                jcp.addClass('jcrop-ux-inactive-handles');
-            }
-
-            function campoMaria() {
-                const rect = Jcrop.Rect.create(130, 500, 360, 110);
-                jcp.newWidget(rect);
-            }
-
-            function campoPedro() {
-                const rect = Jcrop.Rect.create(580, 500, 360, 110);
-                jcp.newWidget(rect);
-            }
-
-            function campoTeste() {                              
-                const point = [110,110];
-                const rect = Jcrop.Rect.fromPoint(point,200,300,'br');
-                jcp.newWidget(rect);
-            }
-
-            const stage = Jcrop.attach('target');
-            stage.listen('crop.update',function(widget,e){
-            const pos = widget.pos;
-            console.log(pos.x,pos.y,pos.w,pos.h);
-            });
-
-            var jcp3;
-            const myImage = new Image();
-            myImage.src = 'https://s1.static.brasilescola.uol.com.br/be/2021/11/planeta-marte.jpg';
-            document.getElementById('container').appendChild(myImage);
-            Jcrop.load(myImage).then(img =>{
-                jcp3 = Jcrop.attach(img, {shadeColor: 'pink'})
-            });
-
-        </script>
+        <div id="container" width="600" height="400"></div>
     </main>
+
+    <script src="js/form.js"></script>
 </body>
 
 </html>
