--- a/funcoes.html
+++ b/funcoes.html
@@ -17,11 +17,11 @@
         <div class="caixa">
             <nav>
                 <ul>
-                    <li><a href="jcrop-botao.html">Home</a></li>
+                    <li><a href="main.html">Home</a></li>
                     <li><a href="upload.html">Upload</a></li>
-                    <li><a href="form.html">Formulário</a></li>
+                    <li><a href="funcoes.html">Funções</a></li>
                     <li><a href="classes.html">Classes</a></li>
-                    <li><a href="teste.html">Teste</a></li>
+                    <li><a href="teste.html">Testes</a></li>
                 </ul>
             </nav>
         </div>
@@ -59,6 +59,7 @@
             </div>
 
         </div>
+        
         <div class="crop_espaco">
             <img src="img/espaco.jpg" id="target" width="600" height="400">
             <br>
@@ -75,7 +76,7 @@
         <div id="container" width="600" height="400"></div>
     </main>
 
-    <script src="js/form.js"></script>
+    <script src="js/funcoes.js"></script>
 </body>
 
 </html>
