--- a/upload.html
+++ b/upload.html
@@ -19,11 +19,11 @@
         <div class="caixa">
             <nav>
                 <ul>
-                    <li><a href="jcrop-botao.html">Home</a></li>
+                    <li><a href="main.html">Home</a></li>
                     <li><a href="upload.html">Upload</a></li>
-                    <li><a href="form.html">Formulário</a></li>
+                    <li><a href="funcoes.html">Funções</a></li>
                     <li><a href="classes.html">Classes</a></li>
-                    <li><a href="teste.html">Teste</a></li>
+                    <li><a href="teste.html">Testes</a></li>
                 </ul>
             </nav>
         </div>
