--- a/funcoes.html
+++ b/funcoes.html
@@ -39,13 +39,12 @@
 
             <div>
                 <ul class="coods">
-                    <li>X: <input type="text" readonly="readonly" name="x" id="x" value=""></li>
-                    <li>Y: <input type="text" readonly="readonly"></li>
-                    <li>W: <input type="text" readonly="readonly"></li>
-                    <li>H: <input type="text" readonly="readonly"></li>
+                    <li>X: <input type="text" readonly="readonly" id="x" value=""></li>
+                    <li>Y: <input type="text" readonly="readonly" id="y" value=""></li>
+                    <li>W: <input type="text" readonly="readonly" id="w" value=""></li>
+                    <li>H: <input type="text" readonly="readonly" id="h" value=""></li>
                     <li><button>x2/y2</button></li>
                 </ul>
-
             </div>
 
             <div>
@@ -57,7 +56,6 @@
                     <li><button id="teste" onclick="campoTeste()">Teste</button></li>
                 </ul>
             </div>
-
         </div>
         
         <div class="crop_espaco">
