--- a/funcoes.html
+++ b/funcoes.html
@@ -48,9 +48,9 @@
 
             <div>
                 <ul class="lista-pessoas">
-                    <li><button id="joao" onclick="campoJoao()">João</button></li>
-                    <li><button id="maria" onclick="campoMaria()">Maria</button></li>
-                    <li><button id="pedro" onclick="campoPedro()">Pedro</button></li>
+                    <li><button id="joao" data-campos="joao" onclick="ativarPosicao(0)">João</button></li>
+                    <li><button id="maria" data-campos="maria" onclick="ativarPosicao(1)">Maria</button></li>
+                    <li><button id="pedro" data-campos="pedro" onclick="ativarPosicao(2)">Pedro</button></li>
                 </ul>
             </div>
         </div>
