--- a/funcoes.html
+++ b/funcoes.html
@@ -37,6 +37,7 @@
 
             <div>
                 <ul class="lista-pessoas">
+                    <li><button id="campo-padrao" onclick="newUsuario()">Adicionar Campo</button></li>
                     <li><button id="joao" data-campos="joao" onclick="ativarPosicao(0)">João</button></li>
                     <li><button id="maria" data-campos="maria" onclick="ativarPosicao(1)">Maria</button></li>
                     <li><button id="pedro" data-campos="pedro" onclick="ativarPosicao(2)">Pedro</button></li>
