--- a/funcoes.html
+++ b/funcoes.html
@@ -35,12 +35,12 @@
                 <img src="img/contrato-x.jpeg" id="alvo" width="600" height="400">
             </div>
 
-            <div>
-                <ul class="lista-pessoas">
-                    <li><button id="campo-padrao" onclick="newUsuario()">Adicionar Campo</button></li>
-                    <li><button id="joao" data-campos="joao" onclick="ativarPosicao(0)">João</button></li>
-                    <li><button id="maria" data-campos="maria" onclick="ativarPosicao(1)">Maria</button></li>
-                    <li><button id="pedro" data-campos="pedro" onclick="ativarPosicao(2)">Pedro</button></li>
+            <div class="btns-widgets">
+                <ul class="lista-pessoas" id="lista-pessoas">
+                    <li><button id="btn-newuser" onclick="newUsuario()">Adicionar Campo</button></li>
+                    <!-- <li><button id="joao" onclick="ativarPosicao(0)">João</button></li>
+                    <li><button id="maria" onclick="ativarPosicao(1)">Maria</button></li>
+                    <li><button id="pedro" onclick="ativarPosicao(2)">Pedro</button></li> -->
                 </ul>
             </div>
         </div>
