--- a/teste.html
+++ b/teste.html
@@ -1,64 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">   
+    <link rel="stylesheet" href="css/teste.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="dist/jcrop.css">
     <script src="dist/jcrop.js"></script>
-    <title>teste jcrop-ativo</title>
+    <title>Assinaturas do Contrato.</title>
 </head>
 <body>
     <header>
         <div class="caixa">
             <nav>
-                <ul>
+                <ul class="txt-cabecalho"></ul>
                     <li><a href="main.html">Home</a></li>
                     <li><a href="upload.html">Upload</a></li>
                     <li><a href="funcoes.html">Funções</a></li>
-                    <li><a href="classes.html">Classes</a></li>
-                    <li><a href="teste.html">Testes</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
     <main>
+        <h1 class="titulo_principal">Assinaturas do Contrato</h1>
+
+    <div class="contrato">
         <div>
-            <h1>Teste de instancias Jcrop</h1>
-            <img src="img/space1.png" id="alvo" width="600" height="300">
+            <img src="img/contrato-x.jpeg" id="alvo" width="600" height="400">
         </div>
+
+        <div class="btns-widgets">
+            <ul class="lista-pessoas" id="lista-pessoas">
+                <li><button id="btn-newuser" onclick="newUsuario()">Adicionar Campo</button></li>
+                <!-- <li><button id="joao" onclick="ativarPosicao(0)">João</button></li>
+                <li><button id="maria" onclick="ativarPosicao(1)">Maria</button></li>
+                <li><button id="pedro" onclick="ativarPosicao(2)">Pedro</button></li> -->
+            </ul>
+        </div>
+    </div>
+
+        <img src="img/espaco.jpg">
+
+</main>
+
+    <script src="js/funcoes.js"></script>
     
-        <div>
-            <img src="img/espaco.jpg" id="target">
-        </div>
-    </main>
-
-    <script>
-        class SvgWidget extends Jcrop.Widget {
-        init () {
-            super.init();
-            const img = new Image();
-            img.src = 'https://d3o1694hluedf9.cloudfront.net/img/js.svg';
-            this.el.appendChild(img);
-        }
-        }
-
-        Jcrop.attach('target',{
-        shadeOpacity: 0.4,
-        aspectRatio: 1,
-        widgetConstructor: SvgWidget
-        });
-
-
-
-       // jcrop.addClass('jcrop-ux-fade-more');
-      // jcrop.addClass('jcrop-ux-inactive-handles');
-        // jcrop.addClass('jcrop-ux-no-outline');
-       // jcrop.addClass('jcrop-ux-keep-current');
-    </script>
 </body>
+
 </html>
