--- a/upload.html
+++ b/upload.html
@@ -18,12 +18,10 @@
     <header>
         <div class="caixa">
             <nav>
-                <ul>
+                <ul class="txt-cabecalho"></ul>
                     <li><a href="main.html">Home</a></li>
                     <li><a href="upload.html">Upload</a></li>
                     <li><a href="funcoes.html">Funções</a></li>
-                    <li><a href="classes.html">Classes</a></li>
-                    <li><a href="teste.html">Testes</a></li>
                 </ul>
             </nav>
         </div>
