--- a/funcoes.html
+++ b/funcoes.html
@@ -39,9 +39,9 @@
             </div>    
             <div class="btns-widgets">
                 <div>
-                    <button id="btn-newuser" onclick="newUsuario()">Adicionar</button>
-                    <button id="btn-newuser" onclick="editUsuario()">Editar</button>
-                    <button id="btn-newuser" onclick="delUsuario()">Remover</button>
+                    <button id="btn-userOptions" onclick="newUsuario()">Adicionar</button>
+                    <button id="btn-userOptions" onclick="editUsuario()">Editar</button>
+                    <button id="btn-userOptions" onclick="delUsuario()">Remover</button>
                 </div>
                 <ul class="lista-pessoas" id="lista-pessoas">
                     <!-- <li><button id="btn-newuser" onclick="newUsuario()">Adicionar Usuário</button></li> -->
