--- a/funcoes.html
+++ b/funcoes.html
@@ -37,8 +37,8 @@
             <div class="btns-widgets">
                 <div>
                     <button class="btn-userOptions" id="btn-addUser" onclick="newUsuario()">Adicionar</button>
-                    <button class="btn-userOptions" id="btn-editUser" onclick="editUsuario()">Editar</button>
-                    <button class="btn-userOptions" id="btn-delUser" onclick="delUsuario()">Remover</button>
+                    <button class="btn-userOptions" id="btn-editUser">Editar</button>
+                    <button class="btn-userOptions" id="btn-delUser">Remover</button>
                 </div>
                 <ul class="lista-pessoas" id="lista-pessoas">
                     <!-- <li><button id="btn-newuser" onclick="newUsuario()">Adicionar Usuário</button></li> -->
