--- a/funcoes.html
+++ b/funcoes.html
@@ -29,7 +29,7 @@
 
         <div style="display:flex">
             <div class="contrato">
-                <div>
+                <div class="jcp-instancia">
                     <img src="img/contrato-x.jpeg" id="alvo" width="600" height="400">
                 </div>
     
