--- a/funcoes.html
+++ b/funcoes.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="dist/jcrop.css">
-    <script src="dist/jcrop.js"></script>
     <title>Assinaturas do Contrato.</title>
 </head>
 
@@ -17,7 +16,10 @@
         <div class="caixa">
             <nav>
                 <ul class="txt-cabecalho"></ul>
-                    <li><a href="funcoes.html">Funções</a></li>
+                    <li class="elementos-cabecalho">
+                    <img id="logotipo" src="img/logotipo-3A-Digitall.png" alt="logotipo-3A-Digitall">
+                    <a href="funcoes.html" class="links-paginas">Assinaturas</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -30,7 +32,7 @@
         <div style="display:flex">
             <div class="contrato">
                 <div class="jcp-instancia">
-                    <img src="img/contrato-x.jpeg" id="alvo" width="600" height="400">
+                    <img src="img/contrato-x.jpeg" id="alvo" width="600" height="500">
                 </div>
     
             </div>    
@@ -48,6 +50,11 @@
         
     </main>
 
+    <footer>
+        <h1 class="titulo_header">Esse é o rodapé</h1>
+    </footer>
+
+    <script src="dist/jcrop.js"></script>
     <script src="js/funcoes.js"></script>
 </body>
 
