--- a/funcoes.html
+++ b/funcoes.html
@@ -18,7 +18,7 @@
                 <ul class="txt-cabecalho"></ul>
                     <li class="elementos-cabecalho">
                     <img id="logotipo" src="img/logotipo-3A-Digitall.png" alt="logotipo-3A-Digitall">
-                    <a href="funcoes.html" class="links-paginas">Assinaturas</a>
+                    <a href="funcoes.html" class="links-paginas">Assinaturas<i class="fa-solid fa-file-signature"></i></a>
                     </li>
                 </ul>
             </nav>
@@ -38,9 +38,9 @@
             </div>    
             <div class="btns-widgets">
                 <div>
-                    <button class="btn-userOptions" id="btn-addUser" onclick="newUsuario()">Adicionar</button>
-                    <button class="btn-userOptions" id="btn-editUser">Editar</button>
-                    <button class="btn-userOptions" id="btn-delUser">Remover</button>
+                    <button class="btn-userOptions" id="btn-addUser" onclick="newUsuario()">Adicionar<i class="fa-regular fa-user"></i></button>
+                    <button class="btn-userOptions" id="btn-editUser">Editar<i class="fa-regular fa-pen-to-square"></i></button>
+                    <button class="btn-userOptions" id="btn-delUser">Remover<i class="fa-regular fa-trash-can"></i></button>
                 </div>
                 <ul class="lista-pessoas" id="lista-pessoas">
 
@@ -51,9 +51,10 @@
     </main>
 
     <footer>
-        <h1 class="titulo_header">Esse é o rodapé</h1>
+        <h1 class="titulo_header">Este é o rodapé</h1>
     </footer>
 
+    <script src="https://kit.fontawesome.com/2af03958ff.js" crossorigin="anonymous"></script>
     <script src="dist/jcrop.js"></script>
     <script src="js/funcoes.js"></script>
 </body>
