--- a/funcoes.html
+++ b/funcoes.html
@@ -39,12 +39,9 @@
             </div>
             <div class="btns-widgets">
                 <div>
-                    <button class="btn-userOptions" id="btn-addUser" onclick="newUsuario()">Adicionar<i
-                            class="fa-regular fa-user"></i></button>
-                    <button class="btn-userOptions" id="btn-editUser">Editar<i
-                            class="fa-regular fa-pen-to-square"></i></button>
-                    <button class="btn-userOptions" id="btn-delUser">Remover<i
-                            class="fa-regular fa-trash-can"></i></button>
+                    <button class="btn-userOptions" id="btn-addUser" onclick="newUsuario()">Adicionar<i class="fa-regular fa-user"></i></button>
+                    <button class="btn-userOptions" id="btn-editUser">Editar<i class="fa-regular fa-pen-to-square"></i></button>
+                    <button class="btn-userOptions" id="btn-delUser">Remover<i class="fa-regular fa-trash-can"></i></button>
                 </div>
                 <ul class="lista-pessoas" id="lista-pessoas">
 
