--- a/funcoes.html
+++ b/funcoes.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/funcoes.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="dist/jcrop.css">
-    <title>Assinaturas do Contrato.</title>
+    <title>Assinaturas do Contrato</title>
 </head>
 
 <body>
-    <header>
-        <div class="caixa">
-            <nav>
-                <ul class="txt-cabecalho"></ul>
-                <li class="elementos-cabecalho">
-                    <img id="logotipo" src="img/logotipo-3A-Digitall.png" alt="logotipo-3A-Digitall">
-                    <a href="funcoes.html" class="links-paginas">Assinaturas<i
-                            class="fa-solid fa-file-signature"></i></a>
-                </li>
-                </ul>
-            </nav>
-        </div>
+    <header class="cabeçalho">
+        <nav>
+            <div class="container">
+                <img id="logotipo" src="img/logotipo-3A-Digitall.png" alt="logotipo-3A-Digitall" class="container_logo">          
+                <a href="" class="container_titulos">Home</a>
+                <a href="funcoes.html" class="container_titulos">Assinaturas</a>
+                <a href="" class="container_titulos">Exemplo</a>
+                <a href="" class="container_titulos">Exemplo</a>
+            </div>
+
+        </nav>
     </header>
 
     <main>
